--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Tela2IntentResultActivity"></activity>
-        <activity android:name=".tela1IntentResultActivity">
+        <activity android:name=".listagensActivity"></activity>
+        <activity android:name=".input1Activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".Tela2IntentResultActivity" />
+        <activity android:name=".tela1IntentResultActivity" />
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
