--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".listagensActivity"></activity>
+        <activity android:name=".ListaCelularActivity"></activity>
+        <activity android:name=".listagensActivity" />
         <activity android:name=".input1Activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
